--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^1.5.8",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
