criação da página de update de itens do cardapio

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.0",
     "react": "^16.8.6",
+    "react-art": "^16.12.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
