--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.8",
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
