--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.8.6",
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-art": "^16.12.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "rxjs": "^6.3.3",
     "styled-components": "^4.3.2",
+    "sweetalert2": "^9.5.3",
+    "sweetalert2-react": "^0.8.3",
     "yup": "^0.27.0"
   },
   "scripts": {
