--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-art": "^16.12.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "rxjs": "^6.3.3",
     "styled-components": "^4.3.2",
     "sweetalert2": "^9.5.3",
