--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-alert-template-basic": "^1.0.0",
     "react-art": "^16.12.0",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.0",
     "rxjs": "^6.3.3",
