--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
     "react-art": "^16.12.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.8.6",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.0.1",
