--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "@react-pdf/renderer": "^1.6.8",
     "axios": "^0.19.0",
     "cors": "^2.8.5",
