--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-pdf/renderer": "^1.6.8",
     "axios": "^0.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "formik": "^1.5.8",
     "history": "^4.9.0",
