--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.8.6",
     "react-modal": "^3.11.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.0",
+    "react-toastify": "^6.0.6",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "rxjs": "^6.3.3",
     "styled-components": "^4.3.2",
     "sweetalert2": "^9.5.3",
