--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.0",
+    "react-text-mask": "^5.4.3",
     "react-toastify": "^6.0.6",
     "reactotron-react-js": "^3.3.7",
     "redux": "^4.0.5",
