--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^1.5.8",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
