--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_NOT_SECRET_CODE=localhost:3000
+REACT_APP_NOT_SECRET_CODE=https://nest-heroku-demo456.herokuapp.com/v1/
 API_URL=localhost:3000
